# gonnamakei-full-rust

./: .gitignore  Cargo.toml  README.md
api-server/: Cargo.toml  README.md
api-server/src/: constants.rs  context.rs  main.rs
api-server/src/error/: mod.rs
api-server/src/models/requests/: mod.rs
api-server/src/models/requests/bet/: send.rs
api-server/src/models/requests/challenge/: create.rs  create_config.rs  get.rs  list.rs  mod.rs
api-server/src/models/requests/mail_list/: subscribe.rs
api-server/src/models/responses/: mod.rs
api-server/src/routes/: bet.rs  challenge.rs  internal.rs  mail_list.rs  mod.rs  participant.rs  rejections.rs  signature.rs
api-server/src/routes/data/: mod.rs
api-server/src/routes/data/games/: mod.rs  (+1 more)
api-server/src/services/: mod.rs  utils.rs
api-server/src/services/bet/: check.rs  mod.rs  send.rs
api-server/src/services/challenge/: bet.rs  create.rs  create_config.rs  get.rs  info.rs  list.rs  mod.rs
api-server/src/services/internal/: auth_check.rs  mod.rs
api-server/src/services/mail_list/: mod.rs  subscribe.rs
api-server/src/services/participant/: get.rs  login.rs  logout.rs  mod.rs  update.rs
api-server/src/services/signature/: request.rs
api-server/src/tests/: clash_api.rs  common.rs  mod.rs
api-server/src/tests/routes/: mod.rs
commons/: Cargo.toml  README.md
commons/src/: constants.rs  lib.rs  macros.rs  programs.rs
commons/src/clients/: mod.rs
commons/src/clients/games/: mod.rs
commons/src/clients/solana/: bet_program.rs  challenge_program.rs  investment_program.rs  loader.rs  mod.rs
commons/src/config/: backend.rs  database.rs  game.rs  mod.rs  solana.rs  wallet.rs
commons/src/data/: mod.rs
commons/src/data/games/: mod.rs
commons/src/data/remote_mutex/: mod.rs  mutex.rs  tests.rs
commons/src/database/: api_document.rs  collection.rs  collection_edge.rs  document.rs  document_edge.rs  mod.rs  nullable_option.rs  reference.rs  reference_api.rs
commons/src/database/aql/: mod.rs  result.rs
commons/src/database/collections/: authentication.rs  bet.rs  challenge.rs  emails.rs  mod.rs  mutex.rs  participant.rs  signature.rs
commons/src/database/documents/: authentication.rs  bet.rs  emails.rs  mod.rs  mutex.rs  signature.rs
commons/src/database/traits/: aql_mapping.rs  mod.rs  normalize.rs
commons/src/database/types/: address.rs  dates.rs  game_type.rs  generics.rs  id.rs  mod.rs  mutex.rs  user_type.rs  uuid.rs
commons/src/error/: codes.rs  mod.rs
commons/src/server/: context.rs  mod.rs  validators.rs
commons/src/server/middleware/: authentication.rs  body.rs  config.rs  limits_ip.rs  mod.rs  params.rs
commons/src/server/requests/: mod.rs  with_param.rs
commons/src/server/responses/: mod.rs  paginated.rs
commons/src/test/: commons.rs  mod.rs
commons/src/tests/: aql.rs  mod.rs  uuid.rs
commons/src/utils/: crypto.rs  file.rs  mod.rs  sync.rs
scripts/: Cargo.toml  README.md
scripts/src/: errors.rs  main.rs
(+403 files in other folders)
