[package]
name = "scripts"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2018"

[dependencies]
arcstr = { version = "1.1.1", features = ["serde", "substr-usize-indices"] }
commons = { path = "../commons", features = ["test"] }
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.64"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros", "sync"] }
warp = { version = "0.3.1", features = ["compression"] }